Cambio de Imágenes y texto
Se realizo un reemplazo de imágenes y se agrego adicionalmente un texto de misión y visión

--- a/about.html
+++ b/about.html
@@ -80,9 +80,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Our Story</h1>
-                    <h5 class="mb-3">Eos kasd eos dolor vero vero, lorem stet diam rebum. Ipsum amet sed vero dolor sea</h5>
-                    <p>Takimata sed vero vero no sit sed, justo clita duo no duo amet et, nonumy kasd sed dolor eos diam lorem eirmod. Amet sit amet amet no. Est nonumy sed labore eirmod sit magna. Erat at est justo sit ut. Labor diam sed ipsum et eirmod</p>
+                    <h1 class="mb-3">Visiòn</h1>
+                    <h5 class="mb-3">En Design Art, aspiramos a ser líderes en la industria del diseño web, innovando constantemente y adoptando nuevas tecnologías para ofrecer las mejores experiencias digitales. </h5>
+                    <p>Nuestro objetivo es impactar positivamente en el crecimiento de las marcas a través de un diseño creativo y estratégico que se adapte a las tendencias del mercado.</p>
                     <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a>
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
@@ -91,8 +91,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Our Vision</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <h1 class="mb-3">Misiòn</h1>
+                    <p>Nuestra misión en Design Art es crear soluciones de diseño web personalizadas que ayuden a las empresas a establecer una presencia digital efectiva. Nos comprometemos a ofrecer un servicio excepcional y a construir relaciones sólidas con nuestros clientes, asegurando que cada proyecto refleje sus valores y visión única.</p>
                     <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
                     <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
                     <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
