Cambio de texto
Se cambio texto en la pestaña service.

--- a/service.html
+++ b/service.html
@@ -75,8 +75,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title">
-                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Our Services</h4>
-                <h1 class="display-4">Fresh & Organic Beans</h1>
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Nuestros Servicios</h4>
+                <h1 class="display-4">Diseño Web Innovador</h1>
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-5">
@@ -85,9 +85,9 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/service-1.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Fastest Door Delivery</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <h4><i class="fa fa-truck service-icon"></i>Diseño Web Personalizado</h4>
+                            <p class="m-0">Creamos páginas web a medida que reflejan la identidad y visión de tu marca, 
+                                asegurando una experiencia única para tus usuarios.</p>
                         </div>
                     </div>
                 </div>
@@ -97,9 +97,9 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/service-2.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Fresh Coffee Beans</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <h4><i class="fa fa-coffee service-icon"></i>Optimización SEO</h4>
+                            <p class="m-0">Implementamos estrategias de SEO para mejorar la visibilidad de tu sitio web en los motores de búsqueda,
+                                 atrayendo más tráfico orgánico.r</p>
                         </div>
                     </div>
                 </div>
@@ -109,9 +109,8 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/service-3.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Best Quality Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <h4><i class="fa fa-award service-icon"></i>Desarrollo de Aplicaciones Web</h4>
+                            <p class="m-0">Desarrollamos aplicaciones web personalizadas que satisfacen tus necesidades específicas, integrando tecnología avanzada y diseño intuitivo.</p>
                         </div>
                     </div>
                 </div>
@@ -121,9 +120,8 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/service-4.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Online Table Booking</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <h4><i class="fa fa-table service-icon"></i>Servicios de Branding</h4>
+                            <p class="m-0">Ayudamos a construir y fortalecer la identidad de tu marca a través de un diseño gráfico atractivo y coherente que resuene con tu audiencia.</p>
                         </div>
                     </div>
                 </div>
