--- a/contact.html
+++ b/contact.html
@@ -91,10 +91,16 @@
             </div>            
             <div class="row">
                 <div class="col-md-6 pb-5">
-                    <iframe style="width: 100%; height: 443px;"
-                        src="https://maps.app.goo.gl/wvYLmcvTAmWwXAhBA"
-                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>                
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3289.483446473761!2d-79.03863792601673!3d-2.891968197084515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91cd22b0d263a699%3A0xb1b8b189eabaab86!2sCampus%20Balzay%20de%20la%20Universidad%20de%20Cuenca!5e1!3m2!1ses-419!2sec!4v1730967362026!5m2!1ses-419!2sec" 
+                        style="width: 100%; height: 443px; border:0;" 
+                        frameborder="0" 
+                        allowfullscreen="" 
+                        aria-hidden="false" 
+                        tabindex="0">
+                    </iframe>
+                </div>
+                               
                 <div class="col-md-6 pb-5">
                     <div class="contact-form">
                         <div id="success"></div>
