--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Visiòn</h1>
+                    <h1 class="mb-3">Vision</h1>
                     <h5 class="mb-3">En Design Art, aspiramos a ser líderes en la industria del diseño web, innovando constantemente y adoptando nuevas tecnologías para ofrecer las mejores experiencias digitales. </h5>
                     <p>Nuestro objetivo es impactar positivamente en el crecimiento de las marcas a través de un diseño creativo y estratégico que se adapte a las tendencias del mercado.</p>
                     <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Misiòn</h1>
+                    <h1 class="mb-3">Mision</h1>
                     <p>Nuestra misión en Design Art es crear soluciones de diseño web personalizadas que ayuden a las empresas a establecer una presencia digital efectiva. Nos comprometemos a ofrecer un servicio excepcional y a construir relaciones sólidas con nuestros clientes, asegurando que cada proyecto refleje sus valores y visión única.</p>
                     <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
                     <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
