--- a/about.html
+++ b/about.html
@@ -52,11 +52,11 @@
     <!-- Inicio del encabezado de la página -->
     <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
         <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
-            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Acerca de Nosotros</h1>
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Mision y Vision</h1>
             <div class="d-inline-flex mb-lg-5">
                 <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
                 <p class="m-0 text-white px-2">/</p>
-                <p class="m-0 text-white">Acerca de Nosotros</p>
+                <p class="m-0 text-white">Mision y Vision</p>
             </div>
         </div>
     </div>
@@ -85,9 +85,10 @@
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3">Misión</h1>
                     <p>Nuestra misión en Design Art es crear soluciones de diseño web personalizadas que ayuden a las empresas a establecer una presencia digital efectiva. Nos comprometemos a ofrecer un servicio excepcional y a construir relaciones sólidas con nuestros clientes, asegurando que cada proyecto refleje sus valores y visión única.</p>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Diseño de páginas web personalizadas</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Optimización para motores de búsqueda (SEO)</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Desarrollo de aplicaciones web</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Servicios de branding y diseño gráfico</h5>
                     <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Más Información</a>
                 </div>
             </div>
