--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
             <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Enlaces rápidos</h4>
             <div class="d-flex flex-column justify-content-start">
                 <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
-                <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
+                <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Misión y Visión </a>
                 <a class="text-white mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
                 <a class="text-white mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
             </div>
