--- a/service.html
+++ b/service.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto p-4">
                     <a href="index.html" class="nav-item nav-link">Inicio</a>
-                    <a href="about.html" class="nav-item nav-link">Mision y Vision</a>
+                    <a href="about.html" class="nav-item nav-link">Misión y Visión </a>
                     <a href="service.html" class="nav-item nav-link active">Servicio</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
